--- a/PRO1014 - Dự án 1/public/css/index.css
+++ b/PRO1014 - Dự án 1/public/css/index.css
@@ -1,7 +1,9 @@
+/* Phần banner */
 #banner img {
   height: 550px;
 }
 
+/* Phần sản phẩm mới ra mắt */
 #new {
   margin: 0 2%;
   color: white;
@@ -57,8 +59,8 @@
   background-color: black;
   border: 2px solid #fab320;
   font-family: "Jura";
-  font-size: 16px;
   font-weight: bold;
+  font-size: 16px;
 }
 
 #new button:hover {
@@ -66,6 +68,11 @@
   color: black;
 }
 
+#new .new-items:hover {
+  transform: scale(1.05);
+}
+
+/* Phần giới thiệu sản phẩm */
 #introduct {
   display: grid;
   grid-template-columns: repeat(1, minmax(200px, 1fr));
@@ -108,6 +115,7 @@
   color: black;
 }
 
+/* Phần sản phẩm nổi bật */
 #hot {
   margin: 0 2%;
   margin-top: 100px;
@@ -160,6 +168,11 @@
   color: black;
 }
 
+#hot .hot-items:hover {
+  transform: scale(1.05);
+}
+
+/* Phần meets */
 #meet {
   margin: 0 2%;
   margin-top: 100px;
@@ -202,18 +215,11 @@
   transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s;
 }
 
-#new .new-items:hover {
-  transform: scale(1.05);
-}
-
-#hot .hot-items:hover {
-  transform: scale(1.05);
-}
-
 #meet .meets:hover {
   transform: scale(1.05);
 }
 
+/* Phần reponsive */
 @media (min-width: 600px) {
   #new .new {
     grid-template-columns: repeat(2, 1fr);
