--- a/PRO1014 - Dự án 1/public/css/cart.css
+++ b/PRO1014 - Dự án 1/public/css/cart.css
@@ -1,14 +1,14 @@
-body {
-    margin: 50px;
-    background-color: black;
-    color: white;
-}
 
 .Giohang h1 {
     text-align: center;
     font-family: 'Jura', sans-serif;
     font-size: 60px;
     font-weight: bold;
+    margin: 2%;
+}
+
+.Giohang {
+    margin: 0 2%;
 }
 
 .Giohang .tieude {
@@ -22,7 +22,7 @@ body {
 
 .Giohang .tieude .gslt {
     display: flex;
-    gap: 13rem;
+    gap: 14rem;
 }
 
 .Giohang .box {
