--- a/PRO1014 - Dự án 1/public/css/style.css
+++ b/PRO1014 - Dự án 1/public/css/style.css
@@ -1,5 +1,6 @@
 #body {
   background-color: black;
+  width: 100%;
 }
 
 #body .logo-nav {
@@ -162,4 +163,20 @@
 #body .social-area .icons a {
   font-size: 17px;
   color: white;
+}
+
+.cart-quantity {
+  position: absolute;
+  display: inline-block;
+  line-height: 15px; 
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  top: -10px;
+  right: -5px;
+  font-size: 13px;
+  color: #fab320;
+  background-color: black;
+  border: 2px solid #fab320;
+  border-radius: 50%;
 }
