--- a/PRO1014 - Dự án 1/public/css/profile.css
+++ b/PRO1014 - Dự án 1/public/css/profile.css
@@ -96,3 +96,37 @@ main h1 {
   color: black;
   background-color: #fab320;
 }
+
+.profile-detail .order {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.profile-detail .order-detail {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  align-items: center;
+  text-align: left;
+}
+
+.profile-detail .order-detail h5 {
+  text-align: right;
+}
+
+.profile-detail .order-detail .image {
+  position: relative;
+}
+
+.profile-detail .order-detail .image span {
+  position: absolute;
+  background-color: white;
+  top: -10px;
+  right: 0;
+  width: 20%;
+  height: 20%;
+  font-size: 20px;
+  border-radius: 50%;
+  color: black;
+  text-align: center;
+}
