--- a/PRO1014 - Dự án 1/public/css/profile.css
+++ b/PRO1014 - Dự án 1/public/css/profile.css
@@ -34,23 +34,23 @@ main h1 {
 }
 
 .profile .profile-detail .avatar {
-    text-align: left;
+  text-align: left;
 }
 
 .profile .profile-detail img {
-    width: 150px;
+  width: 150px;
 }
 
 .profile .profile-detail .file {
-    border: none;
+  border: none;
 }
 
 .profile .profile-detail .logout {
-    float: right;
-    width: 25%;
-    font-size: 16px;
-    height: 40px;
-    margin: 0;
+  float: right;
+  width: 25%;
+  font-size: 16px;
+  height: 40px;
+  margin: 0;
 }
 
 .profile .profile-detail label {
@@ -101,32 +101,64 @@ main h1 {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  border: 1px solid white;
+  margin-bottom: 5%;
+  padding: 20px;
+  border-radius: 2%;
+  font-size: 20px;
 }
 
-.profile-detail .order-detail {
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  align-items: center;
+.profile-detail .order .title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.profile-detail .order .title div {
   text-align: left;
 }
 
-.profile-detail .order-detail h5 {
-  text-align: right;
+.profile-detail .order .order-detail {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  text-align: left;
+  gap: 1%;
+  align-items: center;
+  margin-bottom: 2%;
 }
 
-.profile-detail .order-detail .image {
+.order-detail .image {
+  width: 100%;
   position: relative;
 }
 
-.profile-detail .order-detail .image span {
+.order-detail .image .image-container {
+  aspect-ratio: 1;
+  width: 100%;
+  overflow: hidden;
+}
+
+.order-detail .image .image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.order-detail .image span {
   position: absolute;
-  background-color: white;
   top: -10px;
-  right: 0;
-  width: 20%;
-  height: 20%;
-  font-size: 20px;
+  right: -10px;
+  height: 25%;
+  width: 25%;
+  background-color: #fff;
   border-radius: 50%;
   color: black;
   text-align: center;
+  font-family: "Darker Grotesque";
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.order form {
+  width: 50%;
+  text-align: right;
 }
